# numerical-analysis-assignment

./: README.md
assignment1/: homework_1.c  main.c  myMat.h  myMattest.c
assignment2/: Test.cpp  basefun.h  main.cpp  mycom.h  mymat.h  qrmat.h
assinment3/: CMakeLists.txt  MemoryManagemen.md  README.md  WriteRule.md  main.cpp  test.cpp
assinment3/include/: glo.h  mat.h  vec.h
assinment3/src/: glo.cpp  matMeth.cpp  matOverload.cpp  vecMeth.cpp  vecOverload.cpp
